--- a/test/services/sequence/adapter.yml
+++ b/test/services/sequence/adapter.yml
@@ -21,6 +21,7 @@
     ext_test_adapter_params: "{{ inner_service_params }}"
     ext_test_adapter_credentials: "{{ inner_service_credentials }}"
     ext_test_adapter_state: "{{ inner_service_state }}"
+    ext_test_adapter_base_dir_prefix: "{{ cloud_service_base_dir_prefix }}"
     ext_test_adapter_tmp_dir: "{{ inner_service_tmp_dir }}"
     ext_test_adapter_result: {}
   tags: ["no_print"]
