--- a/test/services/sequence/after.yml
+++ b/test/services/sequence/after.yml
@@ -20,6 +20,7 @@
     ext_test_after_title: "{{ inner_service_title }} - test after"
     ext_test_after_params: "{{ inner_service_params }}"
     ext_test_after_credentials: "{{ inner_service_credentials }}"
+    ext_test_after_contents: "{{ inner_service_contents }}"
     ext_test_after_state: "{{ inner_service_state }}"
     ext_test_after_base_dir_prefix: "{{ inner_service_base_dir_prefix }}"
     ext_test_after_tmp_dir: "{{ inner_service_tmp_dir }}"
