--- a/test/services/sequence/before.yml
+++ b/test/services/sequence/before.yml
@@ -20,6 +20,7 @@
     ext_test_before_title: "{{ inner_service_title }} - test before"
     ext_test_before_params: "{{ inner_service_params }}"
     ext_test_before_credentials: "{{ inner_service_credentials }}"
+    ext_test_before_contents: "{{ inner_service_contents }}"
     ext_test_before_state: "{{ inner_service_state }}"
     ext_test_before_base_dir_prefix: "{{ inner_service_base_dir_prefix }}"
     ext_test_before_tmp_dir: "{{ inner_service_tmp_dir }}"
